# cuBlaser

./: README.md
blaser-pcl-core/: .gitignore  CMakeLists.txt  README.md  package.xml
blaser-pcl-core/config/: blaser_trl6_viz.rviz  blaser_vrep_stitch.rviz
blaser-pcl-core/include/common/: common.hpp  deviceManager.hpp
blaser-pcl-core/include/common/cuda/: cudaUtil.hpp
blaser-pcl-core/include/pcl_gen/: extraction.hpp  fake_omp.h  multiline.hpp  pcl_gen.hpp
blaser-pcl-core/include/pcl_gen/cuda/: kernels.hpp
blaser-pcl-core/include/pcl_gen/sycl/: kernels.hpp
blaser-pcl-core/include/pcl_gen/x86/: kernels.hpp
blaser-pcl-core/scripts/: opencv_capture_v4l2.py  timestamp_test.py
blaser-pcl-core/src/calibration/: calib_eval.cpp  calib_eval.hpp  camera_calibration.cpp  usbcam_circle.xml  ximea_circle.xml  ximea_circle_files.xml
blaser-pcl-core/src/common/: deviceManager.cpp
blaser-pcl-core/src/common/cuda/: cudaUtil.cu
blaser-pcl-core/src/hw_ctrl/: hw_ctrl.hpp  hw_ctrl_handheld_blaser_v30.cpp
blaser-pcl-core/src/interactive_calibration/: .gitignore  calibCommon.hpp  calibController.cpp  calibController.hpp  calibPipeline.cpp  calibPipeline.hpp  frameProcessor.cpp  frameProcessor.hpp  main.cpp  parametersController.cpp  parametersController.hpp  rotationConverters.cpp  rotationConverters.hpp
blaser-pcl-core/src/pcl_gen/: calibration.yaml  calibration_TRL6.yaml  calibration_ue4.yaml  calibration_ue4_multiline.yaml  extraction.cpp  multiline.cpp  triangulation.cpp  triangulation.hpp
blaser-pcl-core/src/pcl_gen/cuda/: kernels.cu
blaser-pcl-core/src/pcl_gen/sycl/: CMakeLists.txt  kernels.cpp
blaser-pcl-core/src/pcl_gen/x86/: kernels.cpp
blaser-pcl-core/src/plugins/: input_plugin.hpp  output_plugin.hpp
blaser-pcl-core/src/plugins/input_ros/: input_ros.cpp  input_ros.hpp
blaser-pcl-core/src/plugins/input_v4l_rgb565/: input_v4l_rgb565.cpp  input_v4l_rgb565.hpp
blaser-pcl-core/src/plugins/input_ximea/: FindXIMEA.cmake  input_ximea.cpp  input_ximea.hpp
blaser-pcl-core/src/plugins/output_pclros/: output_pclros.cpp  output_pclros.hpp
blaser-pcl-core/src/ros/include/: handheld_blaser_v30_node.hpp  pcl_gen_node.hpp  stitcher_node.hpp
blaser-pcl-core/src/ros/src/: handheld_blaser_v30_node.cpp  pcl_gen_node.cpp
blaser-pcl-core/src/ros/srv/: VoxelGridStitch.srv
blaser-pcl-core/src/stitcher/: voxel_grid_filter.cpp
blaser-pcl-core/src/tests/: test_extract.cpp  test_multiline.cpp  test_ros_cvmat.cpp  test_v4l_rgb565_cvmat.cpp  xiApiPlusOcvExample.cpp
blaser_mapping/blaser_ros/: BlaserCommandsReadMe.md  CMakeLists.txt  README.md  calib_result.txt  package.xml  todo.txt
blaser_mapping/blaser_ros/cfg/: LaserDetector.cfg
blaser_mapping/blaser_ros/config/: trl6_calib.yaml  trl6_slam.rviz  trl6_slam.yaml  trl6_slam_210821.yaml  vlio_rviz_config.rviz
blaser_mapping/blaser_ros/config/resolution_analyser/: res_analyser.yaml
blaser_mapping/blaser_ros/include/blaser_ros/: common.h  laser_calib.h  laser_detector.h  laser_geometry_utils.h  laser_rgb_estimator.h  laser_stripe_detector.h  resolution_analyser.h
blaser_mapping/blaser_ros/launch/: blaser_driver.launch  blaser_open_serial.sh  bring_up_blaser.launch  laser_detector_minia1001.launch  laser_detector_vio.launch  laser_rgb_estimator.launch  trl6_sensor_proc.launch  trl6_slam.launch
blaser_mapping/blaser_ros/matlab/: numerical_diff.m  numerical_diff_p2p.m  p2l_so3.m  p2p_so3.m  skew_sym.m
blaser_mapping/blaser_ros/scripts/: Untitled.ipynb  Untitled1.ipynb  im_hsv_shower.py  im_saver.py  imu_driver.py  laser_calib_test.ipynb  laser_resolution_analyze.py  pub_cam_odom.py  static_tf_blaser_vio.py  vis_laser_calib_result.ipynb  vis_laser_calib_result.py
blaser_mapping/blaser_ros/scripts/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  vis_laser_calib_result-checkpoint.ipynb
blaser_mapping/blaser_ros/src/: laser_calib.cpp  laser_calib_node.cpp  laser_detector.cpp  laser_detector_node.cpp  laser_geometry_utils.cpp  laser_rgb_estimator.cpp  laser_rgb_estimator_node.cpp  laser_stripe_detector.cpp  resolution_analyser.cpp
blaser_mapping/blaser_ros/src/test/: laser_stripe_detector_test.cpp
blaser_mapping/blaser_ros/src/util/: cv_click_handler.cpp  geometry_util.cpp
blaser_mapping/blaser_slam/slam_estimator/: CMakeLists.txt  package.xml
blaser_mapping/blaser_slam/slam_estimator/cfg/: BlaserSLAM.cfg
blaser_mapping/blaser_slam/slam_estimator/cmake/: FindMatio.cmake
blaser_mapping/blaser_slam/slam_estimator/launch/: 3dm.launch  black_box.launch  cla.launch  euroc.launch  euroc_no_extrinsic_param.launch  realsense_color.launch  (+4 more)
blaser_mapping/common/: CMakeLists.txt
blaser_mapping/common/include/: deviceManager.hpp
blaser_mapping/common/src/: deviceManager.cpp
blaser_mapping/pipe_blaser_ros/: CMakeLists.txt  calib_result.txt  calib_result_1.txt  calib_result_2.txt  package.xml  todo.txt
blaser_mapping/pipe_blaser_ros/cfg/: LaserRingDetector.cfg
blaser_mapping/pipe_blaser_ros/config/: iros2021.yaml  iros2021_calib.yaml  iros2021_vins.yaml  mask_1296x972.png.bak  mask_960x720.png.bak  v1_vins.yaml  v2_calib.yaml  v2_mask.png.bak  v2_vins.yaml  v2_vins_laser4_cx5.yaml  vlio_rviz_config.rviz
blaser_mapping/pipe_blaser_ros/launch/: start_pipe_blaser_revolving.launch  start_pipe_blaser_v1.launch  start_pipe_blaser_v2.launch  v1_sensor_proc.launch  v1_vins.launch  v2_sensor_proc.launch  v2_vins.launch
blaser_mapping/pipe_blaser_ros/scripts/: blaser_compressed_image_pub.py  blaser_image_pub.py  constants.py  encoder_filter.py  fisheye_mask_generator.py  im_saver.py  image_compressed_web_stream_pub.py  image_sharpen.py  image_web_stream_pub.py  imu_driver_1_stamp.py  imu_driver_2_stamps.py  tmp.py  vis_laser_calib_result.py  ximea_camera_driver.py  ximea_driver_simple_ros.py
blaser_mapping/pipe_blaser_ros/src/: bresenham.cpp  fisheye_mask_generator.cpp  laser_ring_calib.cpp  laser_ring_detector.cpp  point_cloud_server.cpp  ring_laser_triangulator_ros.cpp  sensitivity_analyser.cpp  xiApiPlusOcv.cpp  ximea_camera_driver.cpp
blaser_mapping/pipe_blaser_ros/test/: laser_ring_detector_test.cpp
(+185 files in other folders)
